Ignore leading whitespace

--- a/testdata/hello.properties
+++ b/testdata/hello.properties
@@ -6,7 +6,7 @@ key2=value2
 validkey validvalue
 
 ! another comment
-this.is.a.long.key  = this.is.a.long.value
+this.is.a.long.key  = value.with.leading.space
 
 colonkey:colonvalue
 
